feat: add method to get aggregated items for group in StorageItemService with sort and filter functionality